--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,24 +1,24 @@
 # Add book data from
-empty.bookDataFormData.title=Title is mandatory
-empty.bookDataFormData.yearOfPublication=Year is mandatory
-empty.bookDataFormData.edition=Edition is mandatory
-empty.bookDataFormData.author=Author is mandatory
-empty.bookDataFormData.isbn=ISBN is mandatory
-notvalid.bookDataFormData.edition=Edition is not valid
-notvalid.bookDataFormData.isbn=ISBN is not valid
-notvalid.bookDataFormData.yearOfPublication=Year is not valid
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+empty.bookDataFormData.title=Please enter a title for your book.
+empty.bookDataFormData.yearOfPublication=Please enter a year, it has to be a four digit number.
+empty.bookDataFormData.edition=Please enter a text for Edition.
+empty.bookDataFormData.author=Please enter a text for Author.
+empty.bookDataFormData.isbn=Please enter a ISBN number.
+notvalid.bookDataFormData.edition=Please enter a valid Edition.
+notvalid.bookDataFormData.isbn=Please enter a valid ISBN number, e.g. 12345-1234567-123456-1. 
+notvalid.bookDataFormData.yearOfPublication=Year has to be a four digit number.
+invalid.length.bookDataFormData.yearOfPublication=Year has to be a four digit number.
 
 # Borrow book form
-notvalid.borrowCmd.isbn=ISBN is not valid
-empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowCmd.email=Email is not valid
-empty.borrowCmd.email=Email is mandatory
+notvalid.borrowCmd.isbn=Please enter a valid ISBN number, e.g. 12345-1234567-123456-1.
+empty.borrowCmd.isbn=Please enter a ISBN number.
+notvalid.borrowCmd.email=Please enter a valid Email address.
+empty.borrowCmd.email=Please enter a Email address.
 
 # Return all books form
-empty.returnAllBookFormData.emailAddress=Email is mandatory
-notvalid.returnAllBookFormData.emailAddress=Email is not valid
+empty.returnAllBookFormData.emailAddress=Please enter a Email address.
+notvalid.returnAllBookFormData.emailAddress=Please enter a valid Email address.
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
-de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
+de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a ISBN number.
+de.codecentric.psd.worblehat.web.validation.Numeric=Please enter a numeric number.
