WB-104 fix the ISBN example in the error message

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -3,15 +3,15 @@ empty.bookDataFormData.title=Please enter a title for your book.
 empty.bookDataFormData.yearOfPublication=Please enter a year, it has to be a four digit number.
 empty.bookDataFormData.edition=Please enter a text for Edition.
 empty.bookDataFormData.author=Please enter a text for Author.
-empty.bookDataFormData.isbn=Please enter a ISBN number.
+empty.bookDataFormData.isbn=Please enter a ISBN-10 number.
 notvalid.bookDataFormData.edition=Please enter a valid Edition.
-notvalid.bookDataFormData.isbn=Please enter a valid ISBN number, e.g. 12345-1234567-123456-1. 
+notvalid.bookDataFormData.isbn=Please enter a valid ISBN-10 number, e.g. 0747532699. 
 notvalid.bookDataFormData.yearOfPublication=Year has to be a four digit number.
 invalid.length.bookDataFormData.yearOfPublication=Year has to be a four digit number.
 
 # Borrow book form
-notvalid.borrowCmd.isbn=Please enter a valid ISBN number, e.g. 12345-1234567-123456-1.
-empty.borrowCmd.isbn=Please enter a ISBN number.
+notvalid.borrowCmd.isbn=Please enter a valid ISBN-10 number, e.g. 0747532699.
+empty.borrowCmd.isbn=Please enter a ISBN-10 number.
 notvalid.borrowCmd.email=Please enter a valid Email address.
 empty.borrowCmd.email=Please enter a Email address.
 
@@ -20,5 +20,5 @@ empty.returnAllBookFormData.emailAddress=Please enter a Email address.
 notvalid.returnAllBookFormData.emailAddress=Please enter a valid Email address.
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a ISBN number.
+de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a ISBN-10 number.
 de.codecentric.psd.worblehat.web.validation.Numeric=Please enter a numeric number.
