--- a/pom.xml
+++ b/pom.xml
@@ -145,17 +145,17 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.9</version>
+                <version>3.11</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.19</version>
+                <version>8.0.21</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
             </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
@@ -165,22 +165,22 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>6.1.2.Final</version>
+                <version>7.0.0.Alpha6</version>
             </dependency>
             <dependency>
                 <groupId>commons-validator</groupId>
                 <artifactId>commons-validator</artifactId>
-                <version>1.6</version>
+                <version>1.7</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>3.3.3</version>
+                <version>3.5.9</version>
             </dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>1.13.0</version>
+                <version>1.15.0-rc1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -216,6 +216,20 @@
                         </reports>
                     </reportSet>
                 </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>versions-maven-plugin</artifactId>
+                  <version>2.8.1</version>
+                  <reportSets>
+                    <reportSet>
+                      <reports>
+                        <report>dependency-updates-report</report>
+                        <report>plugin-updates-report</report>
+                        <report>property-updates-report</report>
+                      </reports>
+                    </reportSet>
+                  </reportSets>
             </plugin>
         </plugins>
     </reporting>
