improve error messages

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,10 +1,10 @@
 # Add book data from
 empty.bookDataFormData.title=Please enter a title for your book.
 empty.bookDataFormData.yearOfPublication=Please enter a year, it has to be a four digit number.
-empty.bookDataFormData.edition=Please enter a text for Edition.
+empty.bookDataFormData.edition=Please enter a numeric value for Edition.
 empty.bookDataFormData.author=Please enter a text for Author.
 empty.bookDataFormData.isbn=Please enter a ISBN-10 number.
-notvalid.bookDataFormData.edition=Please enter a valid Edition.
+notvalid.bookDataFormData.edition=Please enter a numeric value for Edition.
 notvalid.bookDataFormData.isbn=Please enter a valid ISBN-10 number, e.g. 0747532699. 
 notvalid.bookDataFormData.yearOfPublication=Year has to be a four digit number.
 invalid.length.bookDataFormData.yearOfPublication=Year has to be a four digit number.
